[package]
name = "p2p-webrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

tokio-tungstenite = { version = "0.23", features = ["connect", "rustls-tls-webpki-roots"] }
tungstenite       = { version = "0.23", features = ["rustls-tls-webpki-roots"] }

# ADD this line:
rustls = { version = "0.23", features = ["ring"] }

webrtc = "0.10"
